--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -16,11 +16,18 @@ Not a big surprise that we can describe this with atomic flows (by design). Late
 
 The central idea in this chapter is the notion of \emph{streamlining}, which we express in terms of atomic flows. If we consider identities and weakenings to be the `creators' of atoms, and cuts and coweakening as the `destroyers' of atoms, then an atomic flow is weakly streamlined if no atom is first created and then destroyed. Alternatively, an atomic flow is streamlined if every edge appears in a path to $\top$ or to $\bot$. The shape of a streamlined atomic flow is given in case (\ref{definition:FlowNormalForms:item:Streamlined}) of Definition~\ref{definition:FlowNormalForms}.
 
-The most challenging aspect of streamlining is the elimination of paths from interaction to cut vertices. For this reason, we define the notion of \emph{weakly streamlined} atomic flows, in case (\ref{definition:FlowNormalForms:item:Streamlined}) of Definition~\ref{definition:FlowNormalForms}. An atomic flow is weakly streamlined if it contains no paths from interaction to cut vertices. This is the topic of Chapter~\vref{chapter:GlobalReductions}.
+The most challenging aspect of streamlining is the elimination of paths from interaction to cut vertices. For this reason, we define the notion of \emph{weakly streamlined} atomic flows, in case (\ref{definition:FlowNormalForms:item:WeaklyStreamlined}) of Definition~\ref{definition:FlowNormalForms}. An atomic flow is weakly streamlined if it contains no paths from interaction to cut vertices. This is the topic of Chapter~\vref{chapter:GlobalReductions}.
 
-The elimination of a path whose edges are mapped to from the atom $a$, might interfere with the elimination of paths whose edges are mapped to from the atom $\bar a$. In principle, this might cause procedures not to terminate. However, as we will see later termination is not a problem if we remove the paths in `two phases'. We first eliminate all the paths mapped to from $a$ and then all the paths mapped to from $\bar a$. This approach motivated the definition of an atomic flow being \emph{weakly streamlined with respect to the polarity assignment $\pi$}.
+A path can be eliminated by removing the edges that make up the path. However, we might imagine a situation where an edge belongs to two paths, one we want to eliminate and one we want to keep. An atomic flow is in \emph{simple form}, if this situation does not occur. One approach to eliminating paths from a flow is to transform it into simple form and then eliminating the edges connecting interaction and cut vertices.
 
-A path can be eliminated by removing the edges that make up the path. However, we might imagine a situation where an edge belongs to two paths, one we want to eliminate and one we want to keep. For a given polarity assignment $\pi$, an atomic flow \emph{in simple form with respect to $\pi$} is a flow where every edge with polarity assignment $\ppl$ never belongs to one path we want to eliminate and one we want to keep.
+Sometimes, the elimination of edges mapped to by an atom $a$ might interfere with the elimination of edges mapped to from the atom $\bar a$. For this reason, we find it convenient to define special cases of simple form and weakly streamlined, where for every pair of dual atoms the edges mapped to from one of them are ignored. These are cases (\ref{definition:FlowNormalForms:item:SimpleForm}) and (\ref{definition:FlowNormalForms:item:WeaklyStreamlinedPolarity}) of Definition~\ref{definition:FlowNormalForms}.
+
+The intuition behind the other normal forms are:
+\begin{itemize}
+\item a weakly streamlined flow is streamlined if it contains no paths from interaction (resp., cut) to coweakening (resp., weakeinng) vertices, or from weakening to coweakening vertices;
+\item a streamlined flow is \emph{super streamlined} if it contains no paths from (co)weakening to (co)contraction vertices; and
+\item a super streamlined flow is streamlined if it contains no path whose first edge is an upper edge of a cocontraction vertex and last edge is the lower edge of a contraction vertex.
+\end{itemize}
 
 
 
